# convert2jpg

./: .gitignore  Pipfile  README.md  convert2jpg.py  convert_AAB.py  convert_pdf_AAB.py  copy_jpg_folders.py  pyproject.toml  requirements.txt
